--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+!**/src/main/**/build/
+
 
 ### STS ###
 .apt_generated
@@ -35,3 +37,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+!**/src/main/**/secrect
+
+application
